--- a/index.html
+++ b/index.html
@@ -1,37 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework2 - Responsive Landing Page </title>
-    <link rel="stylesheet" href="assets/css/style.css"> 
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-  
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homework2 - Responsive Landing Page</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- HEADER -->
-    <header>
-        <h1>Starter Template</h1>
+    <header class="1-header">
+      <nav class="nav bd-grid">
+        <a href="#" class="nav-logo">
+          Logo
+          <span>Area</span>
+        </a>
+        <div class="nav-menu">
+          <ul>
+            <a id="nav-menu" href="#">Home</a>
+            <a id="nav-menu" href="#">About</a>
+            <a id="nav-menu" href="#">Top5</a>
+            <a id="nav-menu" href="#">Library</a>
+            <a id="nav-menu" href="#">Connect</a>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <!-- MAIN CONTENT -->
     <main>
-        <!-- HOME --> 
+      <section class="home">
+        <h1 class="home-title">
+          NEVER <br />
+          STOP <br />
+          LISTENING
+        </h1>
+        <div class="home-play">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <p>Click Here To Listen<i class="bx bx-play-circle"></i></p>
+          </a>
+        </div>
+      </section>
     </main>
 
-    
     <div class="social-media">
-        <a href="#" target="_blank" rel="noopener noreferrer">
-            <i class='bx bxl-youtube'></i>
-        </a> 
-        
-        ... 
-
-        ...
+      <a href="#" target="_blank" rel="noopener noreferrer">
+        <i class="bx bxl-youtube"></i>
+      </a>
+      <a href="#" target="_blank" rel="noopener noreferrer">
+        <i class="bx bxl-instagram"></i>
+      </a>
+      <a href="#" target="_blank" rel="noopener noreferrer">
+        <i class="bx bxl-twitter"></i>
+      </a>
     </div>
 
     <!-- MAIN JS;-->
     <script src="assets/js/main.js"></script>
-</body>
+  </body>
 </html>
