--- a/index.html
+++ b/index.html
@@ -13,35 +13,42 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="1-header">
-      <nav class="nav bd-grid">
-        <a href="#" class="nav-logo">
-          Logo
-          <span>Area</span>
-        </a>
-        <div class="nav-menu">
-          <ul>
-            <a id="nav-menu" href="#">Home</a>
-            <a id="nav-menu" href="#">About</a>
-            <a id="nav-menu" href="#">Top5</a>
-            <a id="nav-menu" href="#">Library</a>
-            <a id="nav-menu" href="#">Connect</a>
+    <header id="header">
+      <nav class="nav">
+        <a href="#" class="nav__logo">Logo<span>Area</span></a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link active">Home</a>
+            </li>
+            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Top5</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Library</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
           </ul>
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="bx bx-menu"></i>
         </div>
       </nav>
     </header>
 
     <!-- MAIN CONTENT -->
     <main>
+      <!-- HOME -->
       <section class="home">
-        <h1 class="home-title">
+        <h1 class="home__title">
           NEVER <br />
           STOP <br />
           LISTENING
         </h1>
-        <div class="home-play">
-          <a href="#" target="_blank" rel="noopener noreferrer">
-            <p>Click Here To Listen<i class="bx bx-play-circle"></i></p>
+
+        <div class="home__play">
+          <div class="home__play-text">Click Here to Listen</div>
+          <a href="#" class="home__play-icon">
+            <i class="bx bx-play-circle bx-lg" id="song-icon"></i>
           </a>
         </div>
       </section>
@@ -51,13 +58,19 @@
       <a href="#" target="_blank" rel="noopener noreferrer">
         <i class="bx bxl-youtube"></i>
       </a>
+
       <a href="#" target="_blank" rel="noopener noreferrer">
         <i class="bx bxl-instagram"></i>
       </a>
+
       <a href="#" target="_blank" rel="noopener noreferrer">
         <i class="bx bxl-twitter"></i>
       </a>
     </div>
+
+    <audio id="mySong">
+      <source src="assets/media/song.mp3" type="audio/mp3" />
+    </audio>
 
     <!-- MAIN JS;-->
     <script src="assets/js/main.js"></script>
